--- a/build.gradle
+++ b/build.gradle
@@ -12,8 +12,10 @@ repositories {
 dependencies {
     def junitVersion = '5.8.2'
 
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:$junitVersion'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:$junitVersion'
+    implementation "com.sparkjava:spark-core:2.9.3"
+
+    testImplementation "org.junit.jupiter:junit-jupiter-api:$junitVersion"
+    testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:$junitVersion"
 }
 
 test {
