--- a/build.gradle
+++ b/build.gradle
@@ -11,8 +11,12 @@ repositories {
 
 dependencies {
     def junitVersion = '5.8.2'
+    def daggerVersion = '2.36'
 
     implementation "com.sparkjava:spark-core:2.9.3"
+
+    implementation "com.google.dagger:dagger:$daggerVersion"
+    annotationProcessor "com.google.dagger:dagger-compiler:$daggerVersion"
 
     testImplementation "org.junit.jupiter:junit-jupiter-api:$junitVersion"
     testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:$junitVersion"
