--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,7 @@ repositories {
 dependencies {
     def junitVersion = '5.8.2'
     def daggerVersion = '2.36'
+    def mockitoVersion = '4.4.0'
 
     implementation "com.sparkjava:spark-core:2.9.3"
 
@@ -20,6 +21,9 @@ dependencies {
 
     testImplementation "org.junit.jupiter:junit-jupiter-api:$junitVersion"
     testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:$junitVersion"
+    testImplementation "org.mockito:mockito-core:$mockitoVersion"
+    testImplementation "org.mockito:mockito-junit-jupiter:$mockitoVersion"
+    testImplementation "org.hamcrest:hamcrest:2.2"
 }
 
 test {
