--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,7 @@ dependencies {
     implementation "com.google.code.gson:gson:2.9.0"
     implementation "javax.xml.bind:jaxb-api:2.3.1"
     implementation "com.github.dozermapper:dozer-core:6.5.2"
+    implementation "org.mongodb:mongodb-driver:3.12.10"
 
     testImplementation "org.junit.jupiter:junit-jupiter-api:$junitVersion"
     testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:$junitVersion"
