--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,9 +4,19 @@ services:
 
   mongo:
     image: mongo
+    container_name: mongodb
     restart: always
     ports:
       - 27017:27017
     environment:
       MONGO_INITDB_ROOT_USERNAME: root
       MONGO_INITDB_ROOT_PASSWORD: example
+      MONGO_INITDB_DATABASE: bankingApiDB
+    volumes:
+      - ./init-mongo.js:/docker-entrypoint-initdb.d/init-mongo.js:ro
+      - mongo-volume:/data/db/
+      - mongoconfig-volume:/data/configdb/
+
+volumes:
+  mongo-volume:
+  mongoconfig-volume:
