--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,6 @@ services:
   mongo:
     image: mongo
     container_name: mongodb
-    restart: always
     ports:
       - 27017:27017
     environment:
@@ -16,7 +15,17 @@ services:
       - ./init-mongo.js:/docker-entrypoint-initdb.d/init-mongo.js:ro
       - mongo-volume:/data/db/
       - mongoconfig-volume:/data/configdb/
+  bankingApi:
+      image: openjdk
+      container_name: bankingApi
+      ports:
+        - 4567:4567
+      volumes:
+        - ./build/libs/BankAPI-1.0-SNAPSHOT-all.jar:/app/BankAPI-1.0-SNAPSHOT-all.jar:ro
+        - bankingapi-volume:/app/
+      command: java -jar /app/BankAPI-1.0-SNAPSHOT-all.jar
 
 volumes:
   mongo-volume:
   mongoconfig-volume:
+  bankingapi-volume:
